--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   },
   "devDependencies": {
     "@types/ejs": "^3.1.1",
-    "@types/html-pdf": "^3.0.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.13",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
@@ -38,6 +37,6 @@
   },
   "dependencies": {
     "ejs": "^3.1.8",
-    "html-pdf": "^3.0.1"
+    "puppeteer": "^19.3.0"
   }
 }
