--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.4",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.5"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^106.0.2",
     "ejs": "^3.1.8",
-    "puppeteer": "^19.3.0"
+    "puppeteer-core": "^18.0.5"
   }
 }
