--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
+    "lib": ["es2018", "DOM"],
     "target": "es2020",
     "module": "commonjs",
     "allowJs": true,
     "removeComments": false,
     "strict": true,
     "moduleResolution": "node",
+    "skipLibCheck": true,
     // "preserveConstEnums": true,
     // "noEmit": true,
     // "sourceMap": false,
@@ -16,5 +18,5 @@
     "baseUrl": "./"
   },
   "exclude": ["node_modules", "**/*.test.ts", "**/node_modules"],
-  "include": ["./src/function/**/*.ts", "./src/layer/**/*.ts"]
+  "include": ["./src/**/*.ts"]
 }
